--- a/ip010_nav/param/src_regulated_pure_pursuit.yaml
+++ b/ip010_nav/param/src_regulated_pure_pursuit.yaml
@@ -213,7 +213,7 @@ global_costmap:
 map_server:
   ros__parameters:
     use_sim_time: False
-    yaml_filename: "turtlebot3_world.yaml"
+    yaml_filename: "factory_map.yaml"
     
 map_saver:
   ros__parameters:
