--- a/ip010_amcl/param/amcl.yaml
+++ b/ip010_amcl/param/amcl.yaml
@@ -20,6 +20,8 @@ amcl:
     max_beams: 60
     max_particles: 2000
     min_particles: 500
+    # max_particles: 500
+    # min_particles: 100
     odom_frame_id: "odom"
     pf_err: 0.02
     pf_z: 0.85
