--- a/ip010_nav/param/ip010_regulated_pure_pursuit.yaml
+++ b/ip010_nav/param/ip010_regulated_pure_pursuit.yaml
@@ -153,6 +153,7 @@ local_costmap:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
         # inflation_radius: 0.55
+        inflation_radius: 0.2
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
@@ -202,6 +203,7 @@ global_costmap:
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"        
         cost_scaling_factor: 3.0
+        inflation_radius: 0.3
       always_send_full_costmap: True
   global_costmap_client:
     ros__parameters:
