--- a/ip010_nav/param/ip010_dwb_params.yaml
+++ b/ip010_nav/param/ip010_dwb_params.yaml
@@ -114,9 +114,9 @@ controller_server:
     FollowPath:
       plugin: "dwb_core::DWBLocalPlanner"
       debug_trajectory_details: True
-      min_vel_x: -1.0
+      min_vel_x: -0.5
       min_vel_y: 0.0
-      max_vel_x: 1.0
+      max_vel_x: 0.5
       max_vel_y: 0.0
       max_vel_theta: 1.5
       min_speed_xy: 0.0
@@ -174,7 +174,7 @@ local_costmap:
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
-        # inflation_radius: 0.55
+        inflation_radius: 0.2
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
@@ -224,6 +224,7 @@ global_costmap:
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"        
         cost_scaling_factor: 3.0
+        inflation_radius: 0.3
       always_send_full_costmap: True
   global_costmap_client:
     ros__parameters:
