--- a/ip010_nav/param/ip010_regulated_pure_pursuit.yaml
+++ b/ip010_nav/param/ip010_regulated_pure_pursuit.yaml
@@ -148,12 +148,12 @@ local_costmap:
       height: 3
       resolution: 0.05
       footprint: '[ [0.6, 0.25], [-0.2, 0.25], [-0.2, -0.25], [0.6, -0.25] ]'
-      plugins: ["obstacle_layer", "inflation_layer"]
+      # plugins: ["obstacle_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
-        # inflation_radius: 0.55
         inflation_radius: 0.2
+      plugins: ["obstacle_layer"]
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
@@ -184,6 +184,7 @@ global_costmap:
       use_sim_time: False      
       footprint: '[ [0.6, 0.25], [-0.2, 0.25], [-0.2, -0.25], [0.6, -0.25] ]'
       plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
+      # plugins: ["static_layer", "obstacle_layer"]
       resolution: 0.05
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
